# anonimizer-doc

./: .gitignore  README.md  anonymizer_core.py  macos_ui.py  main.py  pyproject.toml  tkinter_ui.py
.github/workflows/: ci.yml
tests/: test_anonymizer_core.py
