[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anonimizer-doc"
version = "0.1.0"
description = "Обезличивание и расшифровка Excel-файлов"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.scripts]
anonimizer-doc = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
